--- a/ansible/roles/common/tasks/common.yml
+++ b/ansible/roles/common/tasks/common.yml
@@ -1,33 +1,80 @@
 ---
-# Stop Selinux and Disable auto run
-- name: configure / Selinux off and disable
-  selinux:
-    #policy: targeted
-    state: disabled
+# System common settings
+- block:
+    - name: configure / Selinux off and disable
+      selinux:
+        #policy: targeted
+        state: disabled
 
-# Disable ipv6 interface
-- name: configure / Disable ipv6 interface
-  sysctl:
-    name: "{{ item }}"
-    value: "1"
-    sysctl_file: /etc/sysctl.d/20-network.conf
-    sysctl_set: yes
-    reload: yes
-    state: present
-  loop:
-    - net.ipv6.conf.all.disable_ipv6
-    - net.ipv6.conf.default.disable_ipv6
+    - name: configure / disable firewall
+      systemd:
+        name: firewalld
+        state: stopped
+        enabled: no
 
-# Update all packages installed
-- name: configure / update dnf packages
-  dnf:
-    name: "*"
-    state: latest
-    update_cache: yes
+    - name: configure / Disable ipv6 interface
+      sysctl:
+        name: "{{ item }}"
+        value: "1"
+        sysctl_file: /etc/sysctl.d/20-network.conf
+        sysctl_set: yes
+        reload: yes
+        state: present
+      loop:
+        - net.ipv6.conf.all.disable_ipv6
+        - net.ipv6.conf.default.disable_ipv6
 
-# Add epel repository
-- name: configure / import EPEL Repository
-  dnf:
-    name: epel-release
-    state: latest
-    update_cache: yes
+    - name: configure / update dnf packages
+      dnf:
+        name: "*"
+        state: latest
+        update_cache: yes
+
+    - name: configure / import EPEL Repository
+      dnf:
+        name: epel-release
+        state: latest
+        update_cache: yes
+  when:
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution_major_version == "8"
+
+- block:
+    - name: configure / apparmor off and disable
+      systemd:
+        name: apparmor
+        state: stopped
+        enable: no
+
+    - name: configure / disable firewall
+      systemd:
+        name: ufw
+        state: stopped
+        enable: no
+
+    - name: configure / Disable ipv6 interface
+      sysctl:
+        name: "{{ item }}"
+        value: "1"
+        sysctl_file: /etc/sysctl.d/20-network.conf
+        sysctl_set: yes
+        reload: yes
+        state: present
+      loop:
+        - net.ipv6.conf.all.disable_ipv6
+        - net.ipv6.conf.default.disable_ipv6
+        -
+    - name: configure / update dnf packages
+      apt:
+        name: "*"
+        state: latest
+        update_cache: yes
+
+    - name: configure / import EPEL Repository
+      apt:
+        name: epel-release
+        state: latest
+        update_cache: yes
+  when:
+    - ansible_distribution in ["Ubuntu"]
+    - ansible_distribution_major_version == 20.04.3"
