--- a/ansible/roles/zabbix/tasks/install.yml
+++ b/ansible/roles/zabbix/tasks/install.yml
@@ -1,22 +1,54 @@
 ---
-- name: Zabbix-server install check
-  dnf:
-    list: zabbix-server
-  register: dnf_check_server
+- block:
+    - name: Zabbix-server install check
+      dnf:
+        list: zabbix-release
+      register: dnf_check_server
 
-- name: Install zabbix repository
-  dnf:
-    name: https://repo.zabbix.com/zabbix/5.0/rhel/8/x86_64/zabbix-release-5.0-1.el8.noarch.rpm
-    state: latest
+    - name: Install zabbix repository
+      dnf:
+        name: https://repo.zabbix.com/zabbix/5.0/rhel/8/x86_64/zabbix-release-5.0-1.el8.noarch.rpm
+        state: latest
+      when: dnf_check_server.results[0].yumstate != "installed"
 
-- name: Install zabbix server, frontend, agent
-  dnf:
-    name: "{{ zabbix_packages }}"
-    update_cache: yes
-    state: latest
-  vars:
-    zabbix_packages:
-      - zabbix-server-mysql
-      - zabbix-web-mysql
-      - zabbix-apache-conf
-      - zabbix-agent
+    - name: Install zabbix server, frontend, agent
+      dnf:
+        name: "{{ zabbix_packages }}"
+        update_cache: yes
+        state: latest
+      vars:
+        zabbix_packages:
+          - zabbix-server-mysql
+          - zabbix-web-mysql
+          - zabbix-apache-conf
+          - zabbix-agent
+  when:
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution_major_version == "8"
+
+- block:
+    - name: Zabbix-server install check
+      apt:
+        list: zabbix-release
+      register: dnf_check_server
+
+    - name: Install zabbix repository
+      apt:
+        name: https://repo.zabbix.com/zabbix/5.0/rhel/8/x86_64/zabbix-release-5.0-1.el8.noarch.rpm
+        state: latest
+      when: dnf_check_server.results[0].aptstate != "installed"
+
+    - name: Install zabbix server, frontend, agent
+      apt:
+        name: "{{ zabbix_packages }}"
+        update_cache: yes
+        state: latest
+      vars:
+        zabbix_packages:
+          - zabbix-server-mysql
+          - zabbix-web-mysql
+          - zabbix-apache-conf
+          - zabbix-agent
+  when:
+    - ansible_distribution in ["Ubuntu"]
+    - ansible_distribution_major_version == 20.04.3"
