--- a/ansible/roles/common/tasks/timezone.yml
+++ b/ansible/roles/common/tasks/timezone.yml
@@ -9,6 +9,18 @@
     name: chrony
     state: latest
     update_cache: yes
+  when:
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution_major_version == "8"
+
+- name: install / chronyd
+  apt:
+    name: chrony
+    state: latest
+    update_cache: yes
+  when:
+    - ansible_distribution in ["Ubuntu"]
+    - ansible_distribution_version | float >= 20.04
 
 - name: configure / set chrony.conf
   template:
