--- a/ansible/roles/zabbix/tasks/configure.yml
+++ b/ansible/roles/zabbix/tasks/configure.yml
@@ -3,10 +3,23 @@
 - name: Change timezone for php.ini
   lineinfile:
     path: /etc/php-fpm.d/zabbix.conf
-    regex: "^php_value[date.timezone] = Asia/Tokyo"
+    regex: "^php_value[date.timezone] = Europe/Riga"
     insertafter: "^; php_value[date.timezone] = Europe/Riga"
     line: "php_value[date.timezone] = Asia/Tokyo"
     firstmatch: true
+  when:
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution_major_version == "8"
+
+- name: Change timezone for php.ini
+  lineinfile:
+    path: /etc/zabbix/apache.conf
+    regex: "# php_value date.timezone Europe/Riga"
+    insertafter: "# php_value date.timezone Europe/Riga"
+    line: "        php_value date.timezone Asia/Tokyo"
+  when:
+    - ansible_distribution in ["Ubuntu"]
+    - ansible_distribution_version | float >= 20.04
 
 - name: Set Zabbix Server config file
   template:
@@ -25,13 +38,29 @@
     - zabbix-server
     - zabbix-agent
     - httpd
-    - php-fpm
+  when:
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution_major_version == "8"
+
+- name: Restart service
+  systemd:
+    name: "{{ item }}"
+    state: restarted
+    enabled: yes
+  loop:
+    - zabbix-server
+    - zabbix-agent
+    - apache2
+  when:
+    - ansible_distribution in ["Ubuntu"]
+    - ansible_distribution_version | float >= 20.04
 
 - name: Wait for Zabbix Server Service
   wait_for:
     host: "{{ ansible_host }}"
     port: 80
-    delay: 10
+    delay: 5
+    timeout: 60
     state: started
 
 - debug:
