--- a/ansible/roles/zabbix/tasks/install.yml
+++ b/ansible/roles/zabbix/tasks/install.yml
@@ -1,15 +1,9 @@
 ---
 - block:
-    - name: Zabbix-server install check
-      dnf:
-        list: zabbix-release
-      register: dnf_check_server
-
     - name: Install zabbix repository
       dnf:
         name: https://repo.zabbix.com/zabbix/5.0/rhel/8/x86_64/zabbix-release-5.0-1.el8.noarch.rpm
         state: latest
-      when: dnf_check_server.results[0].yumstate != "installed"
 
     - name: Install zabbix server, frontend, agent
       dnf:
@@ -27,16 +21,10 @@
     - ansible_distribution_major_version == "8"
 
 - block:
-    - name: Zabbix-server install check
-      apt:
-        list: zabbix-release
-      register: dnf_check_server
-
     - name: Install zabbix repository
       apt:
-        name: https://repo.zabbix.com/zabbix/5.0/rhel/8/x86_64/zabbix-release-5.0-1.el8.noarch.rpm
-        state: latest
-      when: dnf_check_server.results[0].aptstate != "installed"
+        deb: https://repo.zabbix.com/zabbix/5.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_5.0-1+focal_all.deb
+        state: present
 
     - name: Install zabbix server, frontend, agent
       apt:
@@ -46,9 +34,9 @@
       vars:
         zabbix_packages:
           - zabbix-server-mysql
-          - zabbix-web-mysql
+          - zabbix-frontend-php
           - zabbix-apache-conf
           - zabbix-agent
   when:
     - ansible_distribution in ["Ubuntu"]
-    - ansible_distribution_major_version == 20.04.3"
+    - ansible_distribution_version | float >= 20.04
