--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -9,6 +9,7 @@
 - name: Deploy zabbix server
   hosts: maria_db
   become: true
+  order: inventory
   roles:
     - { role: common, tags: common }
     - { role: mariadb, tags: mariadb }
