--- a/ansible/roles/common/tasks/timezone.yml
+++ b/ansible/roles/common/tasks/timezone.yml
@@ -4,31 +4,41 @@
   timezone:
     name: Asia/Tokyo
 
-- name: install / chronyd
-  dnf:
-    name: chrony
-    state: latest
-    update_cache: yes
+- block:
+    - name: install / chronyd
+      dnf:
+        name: chrony
+        state: latest
+        update_cache: yes
+
+    - name: configure / set chrony.conf
+      template:
+        src: chrony.conf.j2
+        dest: /etc/chrony.conf
+        owner: root
+        group: root
+        mode: 0644
   when:
     - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
     - ansible_distribution_major_version == "8"
 
-- name: install / chronyd
-  apt:
-    name: chrony
-    state: latest
-    update_cache: yes
+- block:
+    - name: install / chronyd
+      apt:
+        name: chrony
+        state: latest
+        update_cache: yes
+
+    - name: configure / set chrony.conf
+      template:
+        src: chrony.conf.j2
+        dest: /etc/chrony/chrony.conf
+        owner: root
+        group: root
+        mode: 0644
   when:
     - ansible_distribution in ["Ubuntu"]
     - ansible_distribution_version | float >= 20.04
-
-- name: configure / set chrony.conf
-  template:
-    src: chrony.conf.j2
-    dest: /etc/chrony.conf
-    owner: root
-    group: root
-    mode: 0644
 
 - name: configure / restart chronyd
   systemd:
