--- a/ansible/roles/mariadb/tasks/configure.yml
+++ b/ansible/roles/mariadb/tasks/configure.yml
@@ -4,7 +4,7 @@
     - name: Set DB config file mariadb-server.cnf
       template:
         src: mariadb-server.cnf.j2
-        dest: /etc/mysql/mariadb.conf.d/50-server.cnf
+        dest: /etc/my.cnf.d/mariadb-server.cnf
         force: yes
         owner: root
         group: root
@@ -13,7 +13,7 @@
     - name: Set DB config file clients.cnf
       template:
         src: clients.cnf.j2
-        dest: /etc/mysql/mariadb.conf.d/50-clients.cnf
+        dest: /etc/my.cnf.d/client.cnf
         force: yes
         owner: root
         group: root
@@ -44,7 +44,7 @@
     - ansible_distribution in ["Ubuntu"]
     - ansible_distribution_version | float >= 20.04
 
-- name: Start MariaDB Server
+- name: Restart MariaDB Server
   systemd:
     name: mariadb.service
     state: restarted
@@ -60,7 +60,7 @@
 
 - block:
     - name: Set root user password
-      command: mysqladmin -u root password "{{ mariadb.root_password}}"
+      command: mysqladmin -u "{{ mariadb.root }}" password "{{ mariadb.root_password}}"
       args:
         creates: "/var/lib/mysql/.changed_root_pass.lck"
       register: changed_root_pass
@@ -70,6 +70,10 @@
         path: /var/lib/mysql/.changed_root_pass.lck
         state: touch
         mode: "0400"
+      when: changed_root_pass.changed
+
+    - name: Set root user password
+      command: mysqladmin -u"{{ mariadb.root }}" -p"{{ mariadb.root_password}}" flush-privileges
       when: changed_root_pass.changed
 
     - name: Delete anonymous user
@@ -105,26 +109,21 @@
       shell: mysql "-u{{ mariadb.user }}" -p"{{ mariadb.user_password }}" "{{ mariadb.db_name }}" -e 'show tables;' | wc -l
       register: zabbix_table_count
 
-    - name: debug
-      debug:
-        msg: "{{ zabbix_table_count }}"
-
     - name: Import initial schema and data
       shell: zcat /usr/share/doc/zabbix-server-mysql*/create.sql.gz | mysql "-u{{ mariadb.user }}" -p"{{ mariadb.user_password }}" "{{ mariadb.db_name }}"
       when: zabbix_table_count.stdout == "0"
       #debugger: always
   run_once: true
   delegate_to: "{{ hostvars.mariadb01.ansible_host }}"
+# - name: Restart MariaDB Server
+#   systemd:
+#     name: mariadb.service
+#     state: restarted
 
-- name: Restart MariaDB Server
-  systemd:
-    name: mariadb.service
-    state: restarted
-
-- name: Wait for MariaDB Server Service
-  wait_for:
-    host: "{{ ansible_host }}"
-    port: 3306
-    delay: 5
-    timeout: 30
-    state: started
+# - name: Wait for MariaDB Server Service
+#   wait_for:
+#     host: "{{ ansible_host }}"
+#     port: 3306
+#     delay: 5
+#     timeout: 30
+#     state: started
