--- a/ansible/roles/zabbix/tasks/install.yml
+++ b/ansible/roles/zabbix/tasks/install.yml
@@ -3,6 +3,7 @@
     - name: Install zabbix repository
       dnf:
         name: https://repo.zabbix.com/zabbix/5.0/rhel/8/x86_64/zabbix-release-5.0-1.el8.noarch.rpm
+        disable_gpg_check: yes
         state: latest
 
     - name: Install zabbix server, frontend, agent
