--- a/ansible/inventory/inventory.ini
+++ b/ansible/inventory/inventory.ini
@@ -1,8 +1,8 @@
 [all:vars]
 #ansible_ssh_private_key_file=~/.ssh/id_rsa
 
-[zabbix_server]
-zabbix01 ansible_host=192.168.11.20
+[ubuntu]
+ubuntu01 ansible_host=192.168.11.21
 
-[maria_db]
-mariadb01 ansible_host=192.168.11.20
+[alma]
+alma01 ansible_host=192.168.11.22
