--- a/ansible/roles/common/tasks/common.yml
+++ b/ansible/roles/common/tasks/common.yml
@@ -3,8 +3,14 @@
 - block:
     - name: configure / Selinux off and disable
       selinux:
-        #policy: targeted
+        #policy: disabled
         state: disabled
+
+    - name: install / import EPEL Repository
+      dnf:
+        name: epel-release
+        state: latest
+        update_cache: yes
 
     - name: configure / disable firewall
       systemd:
@@ -12,27 +18,9 @@
         state: stopped
         enabled: no
 
-    - name: configure / Disable ipv6 interface
-      sysctl:
-        name: "{{ item }}"
-        value: "1"
-        sysctl_file: /etc/sysctl.d/20-network.conf
-        sysctl_set: yes
-        reload: yes
-        state: present
-      loop:
-        - net.ipv6.conf.all.disable_ipv6
-        - net.ipv6.conf.default.disable_ipv6
-
     - name: configure / update all packages
       dnf:
         name: "*"
-        state: latest
-        update_cache: yes
-
-    - name: configure / import EPEL Repository
-      dnf:
-        name: epel-release
         state: latest
         update_cache: yes
   when:
@@ -52,32 +40,26 @@
         state: stopped
         enabled: no
 
-    - name: configure / Disable ipv6 interface
-      sysctl:
-        name: "{{ item }}"
-        value: "1"
-        sysctl_file: /etc/sysctl.d/20-network.conf
-        sysctl_set: yes
-        reload: yes
-        state: present
-      loop:
-        - net.ipv6.conf.all.disable_ipv6
-        - net.ipv6.conf.default.disable_ipv6
-
     - name: configure / update all packages
       apt:
         name: "*"
         state: latest
         update_cache: yes
-
-    # - name: configure / import EPEL Repository
-    #   apt:
-    #     name: epel-release
-    #     state: latest
-    #     update_cache: yes
   when:
     - ansible_distribution in ["Ubuntu"]
     - ansible_distribution_version | float >= 20.04
+
+- name: configure / Disable ipv6 interface
+  sysctl:
+    name: "{{ item }}"
+    value: "1"
+    sysctl_file: /etc/sysctl.d/20-network.conf
+    sysctl_set: yes
+    reload: yes
+    state: present
+  loop:
+    - net.ipv6.conf.all.disable_ipv6
+    - net.ipv6.conf.default.disable_ipv6
 
 - name: Restart target nodes
   reboot:
