--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -6,16 +6,23 @@
 # http_proxy: "http://proxy.jp:8080"
 # https_proxy: "http://proxy.jp:8080"
 
-- name: Deploy zabbix server
-  hosts: maria_db
+- name: Deploy Common settings
+  hosts: ubuntu,alma
   become: true
   order: inventory
   roles:
     - { role: common, tags: common }
+
+- name: Deploy MariaDB server
+  hosts: ubuntu,alma
+  become: true
+  order: inventory
+  roles:
     - { role: mariadb, tags: mariadb }
 
-- name: Deploy zabbix server
-  hosts: zabbix_server
+- name: Deploy Zabbix server
+  hosts: ubuntu,alma
+  order: inventory
   become: true
   roles:
     - { role: zabbix, tags: zabbix }
