--- a/ansible/roles/zabbix/tasks/configure.yml
+++ b/ansible/roles/zabbix/tasks/configure.yml
@@ -1,14 +1,14 @@
 ---
 # Configure zabbix server setting
-- name: Change timezone for php.ini
+- name: configure / change timezone for php.ini
   lineinfile:
-    path: "{{ php_fpm.conf_dir }}{{ zabbix.conf }}"
+    path: "{{ php_fpm.conf_dir }}{{ php_fpm.conf }}"
     regex: "{{ php_fpm.regex }}"
     insertafter: "{{ php_fpm.insertafter }}"
     line: "{{ php_fpm.line }}"
     #firstmatch: true
 
-- name: Set Zabbix Server config file
+- name: configure / set Zabbix Server config file
   template:
     src: zabbix_server.conf.j2
     dest: /etc/zabbix/zabbix_server.conf
@@ -16,14 +16,14 @@
     group: root
     mode: "0600"
 
-- name: Restart service
+- name: configure / Restart service
   systemd:
     name: "{{ item }}"
     state: restarted
     enabled: yes
   loop: "{{ zabbix.service }}"
 
-- name: Wait for Zabbix Server Service
+- name: configure / Wait for Zabbix Server Service
   wait_for:
     host: "{{ ansible_host }}"
     port: 80
@@ -32,4 +32,4 @@
     state: started
 
 - debug:
-    msg: Access to http://{{ ansible_host }}/zabbix/
+    msg: Access to zabbix http://{{ ansible_host }}/zabbix/
