--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 # - import_tasks: tasks/hostname.yml
+- import_tasks: check_before_install.yml
 - import_tasks: install.yml
 - import_tasks: common.yml
 - import_tasks: timezone.yml
