--- a/ansible/6.0/roles/mariadb/tasks/install.yml
+++ b/ansible/6.0/roles/mariadb/tasks/install.yml
@@ -1,20 +1,20 @@
-# - name: Install MariaDB Repository
-#   shell: curl -LsS https://r.mariadb.com/downloads/mariadb_repo_setup | sudo bash
-
 # Note: Zabbix 6.0 needs Mariadb 10.5.x to 10.6.x, 10.7.x is not supported 2022.2.20 now.
-- name: Create Mariadb 10.6 Repository
-  template:
-    src: mariadb.repo
-    dest: /etc/yum.repos.d/
-    owner: root
-    group: root
-    mode: "0644"
+- name: Download Mariadb Repository script
+  get_url:
+    url: https://r.mariadb.com/downloads/mariadb_repo_setup
+    dest: /tmp/
+
+- name: Install MariaDB Repository
+  shell: bash /tmp/mariadb_repo_setup --mariadb-server-version=10.6
+  when:
+    - ansible_distribution in ["Ubuntu"]
+    - ansible_distribution_version | float >= 20.04
 
 - name: Install Database Server for RHEL distribution
   dnf:
     name: "{{ database_packages }}"
     update_cache: yes
-    enablerepo: mariadb-main
+    enablerepo: mariadb
     state: latest
   vars:
     database_packages:
@@ -30,13 +30,12 @@
   apt:
     name: "{{ database_packages }}"
     update_cache: yes
-    enablerepo: mariadb-main
     state: latest
   vars:
     database_packages:
-      - MariaDB-client>
-      - MariaDB-server>
-      - MariaDB-common>
+      - mariadb-client-10.6
+      - mariadb-server-10.6
+      - mariadb-common
       - python3-pymysql
   when:
     - ansible_distribution in ["Ubuntu"]
