--- a/ansible/6.0/roles/zabbix/vars/main.yml
+++ b/ansible/6.0/roles/zabbix/vars/main.yml
@@ -1,1 +1,9 @@
 ---
+zabbix:
+  service:
+    - zabbix-server
+    - zabbix-agent
+mariadb:
+  user: zabbix
+  user_password: zabbix
+  db_name: zabbix
