--- a/ansible/6.0/roles/zabbix/tasks/install.yml
+++ b/ansible/6.0/roles/zabbix/tasks/install.yml
@@ -20,7 +20,7 @@
           - zabbix-selinux-policy
           - zabbix-agent
   when:
-    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat", "Rocky"]
     - ansible_distribution_major_version == "8"
 
 - block:
