--- a/ansible/5.0/roles/common/tasks/install.yml
+++ b/ansible/5.0/roles/common/tasks/install.yml
@@ -5,7 +5,7 @@
     state: latest
     update_cache: yes
   when:
-    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat", "Rocky"]
     - ansible_distribution_major_version == "8"
 
 - name: install / chronyd
