--- a/ansible/5.0/roles/mariadb/tasks/install.yml
+++ b/ansible/5.0/roles/mariadb/tasks/install.yml
@@ -10,7 +10,7 @@
       - mariadb-common
       - python3-PyMySQL
   when:
-    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat", "Rocky"]
     - ansible_distribution_major_version == "8"
 
 - name: Install Database Server
