--- a/ansible/6.0/roles/common/tasks/common.yml
+++ b/ansible/6.0/roles/common/tasks/common.yml
@@ -24,7 +24,7 @@
         state: latest
         update_cache: yes
   when:
-    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat"]
+    - ansible_distribution in ["CentOS", "AlmaLinux", "RedHat", "Rocky"]
     - ansible_distribution_major_version == "8"
 
 - block:
