--- a/ansible/5.0/roles/zabbix/tasks/configure.yml
+++ b/ansible/5.0/roles/zabbix/tasks/configure.yml
@@ -28,7 +28,8 @@
     host: "{{ ansible_host }}"
     port: 80
     delay: 5
-    timeout: 60
+    connect_timeout: 2
+    timeout: 300
     state: started
 
 - debug:
