--- a/ansible/6.0/roles/mariadb/tasks/configure.yml
+++ b/ansible/6.0/roles/mariadb/tasks/configure.yml
@@ -86,8 +86,7 @@
         state: present
 
     - name: configure / Reload privileges for zabbix user
-      shell: mysql "-u{{ mariadb.user }}" "-p{{ mariadb.user_password }}" "{{ mariadb.db_name }}" -e 'flush privileges;' | wc -l
-      register: zabbix_table_count
+      shell: mysql "-u{{ mariadb.user }}" "-p{{ mariadb.user_password }}" "{{ mariadb.db_name }}" -e 'flush privileges;'
 
     - name: configure / Check zabbix table existence
       shell: mysql "-u{{ mariadb.user }}" "-p{{ mariadb.user_password }}" "{{ mariadb.db_name }}" -e 'show tables;' | wc -l
