--- a/ansible/6.0/roles/mariadb/tasks/configure.yml
+++ b/ansible/6.0/roles/mariadb/tasks/configure.yml
@@ -86,10 +86,10 @@
         state: present
 
     - name: configure / Reload privileges for zabbix user
-      shell: mysql "-u{{ mariadb.user }}" "-p{{ mariadb.user_password }}" "{{ mariadb.db_name }}" -e 'flush privileges;'
+      shell: mysql "-u{{ mariadb.root }}" "-p{{ mariadb.root_password }}" "{{ mariadb.db_name }}" -e 'flush privileges;'
 
     - name: configure / Check zabbix table existence
-      shell: mysql "-u{{ mariadb.user }}" "-p{{ mariadb.user_password }}" "{{ mariadb.db_name }}" -e 'show tables;' | wc -l
+      shell: mysql "-u{{ mariadb.root }}" "-p{{ mariadb.root_password }}" "{{ mariadb.db_name }}" -e 'show tables;' | wc -l
       register: zabbix_table_count
 
     - name: configure / Import initial schema and data
