--- a/ansible/6.0/roles/zabbix/tasks/install.yml
+++ b/ansible/6.0/roles/zabbix/tasks/install.yml
@@ -43,4 +43,27 @@
           - zabbix-agent
   when:
     - ansible_distribution in ["Ubuntu"]
-    - ansible_distribution_version | float >= 20.04
+    - ansible_distribution_version == 20.04
+    #- ansible_distribution_version | float >= 20.04
+
+- block:
+    - name: Install zabbix repository
+      apt:
+        deb: https://repo.zabbix.com/zabbix/6.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_6.0-4+ubuntu22.04_all.deb
+        state: present
+
+    - name: Install zabbix server, frontend, agent
+      apt:
+        name: "{{ zabbix_packages }}"
+        update_cache: yes
+        state: latest
+      vars:
+        zabbix_packages:
+          - zabbix-server-mysql
+          - zabbix-frontend-php
+          - zabbix-apache-conf
+          - zabbix-sql-scripts
+          - zabbix-agent
+  when:
+    - ansible_distribution in ["Ubuntu"]
+    - ansible_distribution_version == 22.04
