--- a/ansible/6.0/roles/zabbix/tasks/install.yml
+++ b/ansible/6.0/roles/zabbix/tasks/install.yml
@@ -1,6 +1,6 @@
 ---
 - block:
-    - name: Install zabbix repository
+    - name: Install zabbix repository for RHEL
       dnf:
         name: https://repo.zabbix.com/zabbix/6.0/rhel/8/x86_64/zabbix-release-6.0-1.el8.noarch.rpm
         disable_gpg_check: yes
@@ -24,7 +24,7 @@
     - ansible_distribution_major_version == "8"
 
 - block:
-    - name: Install zabbix repository
+    - name: Install zabbix repository for Ubuntu 20.04
       apt:
         deb: https://repo.zabbix.com/zabbix/6.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_6.0-1+ubuntu20.04_all.deb
         state: present
@@ -43,11 +43,11 @@
           - zabbix-agent
   when:
     - ansible_distribution in ["Ubuntu"]
-    - ansible_distribution_version == 20.04
+    - ansible_distribution_version == "20.04"
     #- ansible_distribution_version | float >= 20.04
 
 - block:
-    - name: Install zabbix repository
+    - name: Install zabbix repository for Ubuntu 22.04
       apt:
         deb: https://repo.zabbix.com/zabbix/6.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_6.0-4+ubuntu22.04_all.deb
         state: present
@@ -66,4 +66,4 @@
           - zabbix-agent
   when:
     - ansible_distribution in ["Ubuntu"]
-    - ansible_distribution_version == 22.04
+    - ansible_distribution_version == "22.04"
